--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   name             : "Caio Cezar"
   avatar           : "/images/bio-pic-2.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Data Science Portfolio"
-  location         : "Rio de Janeiro"
+  location         : "Rio de Janeiro, Brasil"
   email            :
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
