--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ locale                   : "en-US"
 title                    : "Caio Cezar - Graduando em Engenharia de Produção no CEFET-RJ"
 title_separator          : "-"
 name                     : "Caio Cezar"
-description              : "Data Science Portfolio"
+description              : "Engenharia de Produção @ CEFET-RJ"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
