--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ analytics:
 author:
   name             : "Caio Cezar"
   avatar           : "/images/bio-pic-2.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Data Science Portfolio"
+  bio              : "Engenharia de Produção @ CEFET-RJ"
   location         : "Rio de Janeiro, Brasil"
   email            :
   uri              :
