--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Caio Cezar - Graduando em Engenharia de Produção no CEFET-RJ"
+title                    : "Caio Cezar de Oliveira Gomes - Graduando em Engenharia de Produção no CEFET-RJ"
 title_separator          : "-"
 name                     : "Caio Cezar"
 description              : "Engenharia de Produção @ CEFET-RJ"
