--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   avatar           : "/images/minhafoto.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Engenharia de Produção @ CEFET-RJ"
   location         : "Rio de Janeiro, Brasil"
-  email            :
+  email            :"caiogomes18@gmail.com"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
