--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "pt-BR"
 title                    : "Caio Cezar de Oliveira Gomes - Graduando em Engenharia de Produção no CEFET-RJ"
 title_separator          : "-"
 name                     : "Caio Cezar"
